tests/baselines/reference/newNamesInGlobalAugmentations1.errors.txt
f1.d.ts(3,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
f1.d.ts(3,18): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== f1.d.ts (2 errors) ====
    export {};
    
    declare module M.M1 {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                     ~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export let x: number;
    }
    declare global {
        interface SymbolConstructor {
            observable: symbol;
        }
        class Cls {x}
        let [a, b]: number[];
        export import X = M.M1.x;
    }
    
==== main.ts (0 errors) ====
    Symbol.observable;
    new Cls().x
    let c = a + b + X;